@@ -11,7 +11,7 @@
 /*                                                             */
 /***************************************************************/
 
-/* $Id: config.h,v 1.7 1997-03-30 19:07:37 dfs Exp $ */
+/* $Id: config.h,v 1.8 1997-07-13 16:18:48 dfs Exp $ */
 
 /*---------------------------------------------------------------------*/
 /* LAT_DEG, LAT_MIN and LAT_SEC: Latitude of your location             */
@@ -160,7 +160,7 @@
 /*---------------------------------------------------------------------*/
 /* LINELEN: The maximum length of an input line                        */
 /*---------------------------------------------------------------------*/
-#define LINELEN 512
+#define LINELEN 4096
 
 /*---------------------------------------------------------------------*/
 /* OP_STACK_SIZE: The size of the operator stack for expr. parsing     */
@@ -247,7 +247,7 @@
 /*---------------------------------------------------------------------*/
 /* The size of statically-allocated buffers for tokens.                */
 /*---------------------------------------------------------------------*/
-#define TOKSIZE 128
+#define TOKSIZE 1024
 
 /*---------------------------------------------------------------------*/
 /* The size of the buffer for the shell() function.                    */
